// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GiFgRID Debe crear y comparar snapshot 1`] = `
<Fragment>
  <h3>
    IT
  </h3>
  <div
    className="card-grid animate__animated animate__fadeIn"
  />
</Fragment>
`;

exports[`Pruebas en GiFgRID Debe de mostrar imagenes cuando se cargan 1`] = `
<Fragment>
  <h3>
    IT
  </h3>
  <div
    className="card-grid animate__animated animate__fadeIn"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier titulo"
      url="https://google.com.jpg"
    />
    <GifGridItem
      id="ABC123"
      key="ABC123"
      title="Cualquier titulo"
      url="https://google.com.jpg"
    />
  </div>
</Fragment>
`;
